# sigil

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  agent-adoption-plan.md  blog-agent-adoption.md  dist-workspace.toml
.github/workflows/: build-setup.yml  ci.yml  python-publish.yml  release-full.yml  release.yml
.sigil/: SIGIL_MAP.md  cache.json  cochange.json  entities.jsonl  rank.json  refs.jsonl
docs/plans/: 2026-03-23-diff-output-v2.md
docs/superpowers/plans/: 2026-03-23-json-support.md  2026-03-23-yaml-support.md  2026-03-24-markdown-entity-extraction.md
docs/superpowers/specs/: 2026-03-24-markdown-entity-extraction-design.md
evals/: README.md  bench_multilang.py  compare_rg.py  corpus.tsv  cross_repo.sh  run.sh
evals/results/: 0.2.4-HEAD-3..HEAD-o200k.json  0.2.4-HEAD-3..HEAD.json  multilang-2026-04-20.md  multilang-with-db-2026-04-20.md  rg-comparison-2026-04-20.md
evals/results/2026-04-21/haiku-4-5-presigilfix-E2/: E2_001_control_1.json  E2_001_treatment_1.json  E2_002_control_1.json  E2_002_treatment_1.json  E2_003_control_1.json  E2_003_treatment_1.json  E2_004_control_1.json  E2_004_treatment_1.json  E2_005_control_1.json  E2_005_treatment_1.json  E2_006_control_1.json  E2_006_treatment_1.json  E2_007_control_1.json  E2_007_treatment_1.json  E2_008_control_1.json  E2_008_treatment_1.json  E2_009_control_1.json  E2_009_treatment_1.json  E2_010_control_1.json  E2_010_treatment_1.json  summary.md
evals/results/2026-04-21/haiku-4-5/E2-directive-pre/: E2_001_control_1.json  E2_001_treatment_1.json  E2_002_control_1.json  E2_002_treatment_1.json  E2_003_control_1.json  E2_003_treatment_1.json  E2_004_control_1.json  E2_004_treatment_1.json  E2_005_control_1.json  E2_005_treatment_1.json  E2_006_control_1.json  E2_006_treatment_1.json  E2_007_control_1.json  E2_007_treatment_1.json  E2_008_control_1.json  E2_008_treatment_1.json  E2_009_control_1.json  E2_009_treatment_1.json  summary.md
evals/results/2026-04-21/haiku-4-5/E2-names-pre/: E2_001_control_1.json  E2_001_treatment_1.json  E2_002_control_1.json  E2_002_treatment_1.json  E2_003_control_1.json  E2_003_treatment_1.json  E2_004_control_1.json  E2_004_treatment_1.json  E2_005_control_1.json  E2_005_treatment_1.json  E2_006_control_1.json  E2_006_treatment_1.json  E2_007_control_1.json  E2_007_treatment_1.json  E2_008_control_1.json  E2_008_treatment_1.json  E2_009_control_1.json  E2_009_treatment_1.json  summary.md
evals/results/2026-04-21/haiku-4-5/E2-pre-0.4.0/: E2_001_control_1.json  E2_001_treatment_1.json  E2_002_control_1.json  E2_004_control_1.json  E2_004_treatment_1.json  E2_005_control_1.json  E2_006_control_1.json  E2_006_treatment_1.json  E2_007_treatment_1.json  E2_008_treatment_1.json  E2_009_control_1.json
evals/results/2026-04-21/haiku-4-5/E2-preagentuptake/: E2_001_control_1.json  E2_002_treatment_1.json  E2_004_control_1.json  E2_004_treatment_1.json  E2_005_control_1.json  E2_006_control_1.json  E2_007_treatment_1.json  E2_008_treatment_1.json  E2_009_control_1.json  summary.md
evals/results/2026-04-21/haiku-4-5/E2-pretoolsplit/: E2_001_control_1.json  E2_001_treatment_1.json  E2_002_control_1.json  E2_002_treatment_1.json  E2_003_control_1.json  E2_003_treatment_1.json  E2_004_control_1.json  E2_004_treatment_1.json  E2_005_control_1.json  E2_005_treatment_1.json  E2_006_control_1.json  E2_006_treatment_1.json  E2_007_control_1.json  E2_007_treatment_1.json  E2_008_control_1.json  E2_008_treatment_1.json  E2_009_control_1.json  E2_009_treatment_1.json  summary.md
evals/results/2026-04-21/haiku-4-5/E2-splitpre/: E2_001_control_1.json  E2_001_treatment_1.json  E2_002_control_1.json  E2_002_treatment_1.json  E2_003_control_1.json  E2_003_treatment_1.json  E2_004_control_1.json  E2_004_treatment_1.json  E2_005_control_1.json  E2_005_treatment_1.json  E2_006_control_1.json  E2_006_treatment_1.json  E2_007_control_1.json  E2_007_treatment_1.json  E2_008_control_1.json  E2_008_treatment_1.json  E2_009_control_1.json  (+2 more)
evals/runner/: README.md  grade.py  requirements.txt  run-0.4.0-sweep.sh  run-e4-click-spike.sh  run.py
evals/tasks/E2_navigation/: 001-detect-language-definition.yaml  002-pub-fns-in-index.yaml  003-structs-in-entity.yaml  004-find-sym-files.yaml  005-large-fns-in-rank.yaml  006-fns-in-languages.yaml  007-installers-present.yaml  008-modules-in-lib.yaml  009-callers-of-parse-file.yaml
evals/tasks/E2_navigation/_parked/: 010-top-fn-count-files.yaml
evals/tasks/E4_swebench_like/: 001-click-default-resolution.yaml  002-django-modelchoicefield-invalid-choice.yaml
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
scripts/: git-sigil
skills/sigil/: SKILL.md
skills/sigil/references/: advanced.md  diff.md  navigation.md
src/: benchmark.rs  blast.rs  cache.rs  change_detail.rs  classifier.rs  cochange.rs  community.rs  context.rs  diff.rs  diff_json.rs  duplicates.rs  entity.rs  formatter.rs  git.rs  grouping.rs  hasher.rs  index.rs  inline_diff.rs  json_index.rs  lib.rs  main.rs  map.rs  markdown_formatter.rs  markdown_index.rs  matcher.rs  meta.rs  outline.rs  output.rs  query.rs  rank.rs  review.rs  signature.rs  tokens.rs  toml_index.rs  where_cmd.rs  writer.rs  yaml_index.rs
src/install/: aider.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  githook.rs  mod.rs  opencode.rs
src/parser/: NOTICE  c_lang.rs  cpp.rs  csharp.rs  format.rs  go.rs  helpers.rs  java.rs  javascript.rs  markdown.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  treesitter.rs  typescript.rs
src/query/: duckdb_backend.rs  index.rs  mod.rs
tests/: _phase0_day3_live_check.rs  diff_integration.rs  integration.rs  markdown_integration.rs  parity_day4.rs  rank_live_smoke.rs  vendored_parser_smoke.rs
tests/fixtures/: sample.go  sample.json  sample.md  sample.py  sample.rs  sample.toml  sample.ts  sample.yaml  sample_v2.md
tests/fixtures/.sigil/: cache.json  entities.jsonl  refs.jsonl
worked/: README.md
worked/sigil-self/: SIGIL_MAP.md  blast-Entity.md  context-Entity.md  duplicates.md  notes.md  review-HEAD~3..HEAD.md
(+426 files in other folders)
