[package]
name = "sigil"
version = "0.2.0"
edition = "2024"
description = "Structural code fingerprinting and diffing CLI"
repository = "https://github.com/gauravverma/sigil"

[dependencies]
codeix = { git = "https://github.com/montanetech/codeix", tag = "v0.5.0" }
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
ignore = "0.4"
similar = "2"
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
