[package]
name = "sigil-python"
version = "0.3.3"
edition = "2024"
publish = false

[lib]
name = "sigil"
crate-type = ["cdylib"]

[dependencies]
sigil_core = { path = "..", package = "sigil" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
serde_json = { version = "1", features = ["preserve_order"] }
