[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sigil-diff"
version = "0.2.4"
description = "Structural code fingerprinting and diffing — Python bindings"
requires-python = ">=3.8"
license = "MIT"
keywords = ["diff", "code", "structural", "json"]

[tool.maturin]
module-name = "sigil"
